--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <form action=" " method="post"></form> 
             <input type="checkbox" id="checkbox_toggle">
             <label for="checkbox_toggle" class="hamburguer"> &#9776;</label>
-            <div class="Menu">
+            <div class="menu">
             <li> Home</li>
             <li> Sobre</li>
             <li> Serviços</li>
