--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <li> Serviços</li>
             <li> Contatos</li>
 
-            <input type="text" id="Procurar" name= "q"/>
+            <input type="text" id="procurar" name= "q"/>
             <button type="submit"> Procurar </button>
              </div>
         </ul>
