--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="titulo">
-        <img class = "logo-olimpiadas" src="Olimpiadas.png" alt="">
+        <img class = "logo-olimpiadas" src="olimpiadas.png" alt="">
         <p> Olimpíadas News</p>
     <nav>
         <ul>
