--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
             <input type="checkbox" id="checkbox_toggle">
             <label for="checkbox_toggle" class="hamburguer"> &#9776;</label>
             <div class="menu">
+                <div class = "switch">
+                    <input type="checkbox" nome = "switch" id="switch" onclick="toDarkSide()"> 
+                <label for="switch"></label>
+                </div>
             <li> Home</li>
             <li> Sobre</li>
             <li> Serviços</li>
@@ -29,7 +33,7 @@
     </nav>
 </header>
 <main>
-    <section>
+    <section class = "dark">
         <article>
             <figure>
                 <picture>
@@ -139,4 +143,5 @@
 
 </footer>
 </body>
+<script src="script.js"></script>
 </html>
